set better picture an add js part

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 <body>
     <header>
         <div class="navbar">
+            <div class="ul-container">
             <ul>
               <li>Home</li>
               <li>About</li>
@@ -15,8 +16,11 @@
               <li>Buy</li>
               <li>User</li>
             </ul>
+            </div>
         <div class="butoon-container">
             <button>contact us</button>
+            <img width="50" height="50" src="https://img.icons8.com/ios/50/menu--v1.png" alt="menu--v1" id="menue-icon"/>
+            <img width="50" height="50" src="https://img.icons8.com/ios/50/close-window--v1.png" alt="close-window--v1" id="close-icon"/>
         </div>
         <div class="explain">
               <h2>create new generation
@@ -67,7 +71,77 @@
     
     </div>
 </div>
-
+<div  class="comment-content">
+    <div class="comments">
+        <h2 style="color: rgb(247, 238, 238);
+">You Are In a good Hand</h2>
+        <p style="color: rgb(247, 238, 238);
+">Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur</p>
+        <div class="comments-info">
+            <div class="comment">
+                <p>Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                <div class="person-comment">
+                    <img src="./project/images/person-1.png" style="width: 10%;">
+                </div>
+            </div>
+            <div class="comment">
+                <p>Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                <div class="person-comment">
+                    <img src="./project/images/person-2.png" style="width: 10%;">
+                </div>
+            </div>
+            <div class="comment">
+                <p>Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                <div class="person-comment">
+                    <img src="./project/images/person-3.png" style="width: 10%;">
+                </div>
+            </div>
+          
+        </div>
+        <div class="logos">
+            <img src="./project/images/logo-1.svg">
+            <img src="./project/images/logo-2.svg">
+            <img src="./project/images/logo-3.svg">
+            <img src="./project/images/logo-4.svg">
+            <img src="./project/images/logo-5.svg">
+        </div>
+    </div>
+</div>
+<div  class="galery-container">
+   <h6 >PROTOFILE</h6>
+   <h3>Three Simple Step To Started Working</h3>
+   <div class="galery">
+ <div>
+<img src="./project/images/portfolio-1.jpg" style="width: 100%;">
+ </div>
+<div>
+    <img src="./project/images/portfolio-2.jpg" style="width: 100%;">
+</div>
+<div>
+    <img src="./project/images/portfolio-3.jpg" style="width: 100%;">
+</div>
+<div>
+    <img src="./project/images/portfolio-4.jpg" style="width: 100%;">
+</div>
+<div>
+    <img src="./project/images/portfolio-5.jpg" style="width: 100%;">
+</div>
+<div>
+    <img src="./project/images/portfolio-6.jpg" style="width: 100%;">
+</div>
+</div>
     </main>
+    <footer>
+     <div class="footer-search">
+    <h2>Search To Find Close Place </h2>
+       <div class="search-box">
+        <input type="text" placeholder="lets search">
+        <button><img src="./project/images/right-arrow.svg" style="width: 100%,"/></button>
+
+       </div>
+    </footer>
+<script src="./App.js"></script>
+  
 </body>
+
 </html>
